--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: reviewdog
 on: [pull_request]
 jobs:
   golangci-lint:
-    name: runner / golangci-lint
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
@@ -14,7 +14,7 @@ jobs:
       - name: golangci-lint
         uses: reviewdog/action-golangci-lint@v2
   test:
-    name: runner / test
+    name: test
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
@@ -30,4 +30,17 @@ jobs:
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+  build:
+    name: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Setup Go environment
+        uses: actions/setup-go@v5.0.1
+      - name: compile
+        run:
+          make all
         
