--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,7 @@ jobs:
   test:
     name: test
     runs-on: ubuntu-latest
+    needs: golangci-lint
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -33,6 +34,7 @@ jobs:
   build:
     name: build
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
