--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
     needs: golangci-lint
     steps:
       - name: test
-        run:
+        run: |
           make coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
@@ -29,6 +29,6 @@ jobs:
     needs: test
     steps:
       - name: compile
-        run:
+        run: |
           make all
         
