--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: test
         run: |
+          pwd
+          ls -al
           make coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
