--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,15 @@
 name: Test and Build
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - main
+      - master
+  push:
+    branches:
+      - main
+      - master
+    tags:
+      - v*
 jobs:
   golangci-lint:
     name: lint
