--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -14,7 +14,7 @@ on:
       - v*
 
 jobs:
-  build:
+  docker:
     if: github.event.workflow_run.conclusion == 'success'
     uses: aztechian/kube-nut/.github/workflows/docker-build.yaml@main
     with:
