--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,11 +78,15 @@ jobs:
           name: compiled-binaries
           path: bin/
   docker:
-    - name: restore build artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: compiled-binaries
-    - name: Build and push Docker image
-      uses: aztechian/kube-nut/.github/workflows/docker-build.yaml@main
-      with:
-        platforms: linux/amd64,linux/arm64,linux/386,windows/amd64,windows/arm64,windows/386,darwin/amd64,darwin/arm64,darwin/386
+    name: docker
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: restore build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: compiled-binaries
+      - name: Build and push Docker image
+        uses: aztechian/kube-nut/.github/workflows/docker-build.yaml@main
+        with:
+          platforms: linux/amd64,linux/arm64,linux/386,windows/amd64,windows/arm64,windows/386,darwin/amd64,darwin/arm64,darwin/386
