--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -81,12 +81,107 @@ jobs:
     name: docker
     runs-on: ubuntu-latest
     needs: build
+    strategy:
+      matrix:
+        os: [linux, windows, darwin]
+        arch: [amd64, arm64, "386"]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: restore build artifacts
         uses: actions/download-artifact@v4
         with:
           name: compiled-binaries
-      - name: Build and push Docker image
-        uses: aztechian/kube-nut/.github/workflows/docker-build.yaml@main
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          platforms: linux/amd64,linux/arm64,linux/386,windows/amd64,windows/arm64,windows/386,darwin/amd64,darwin/arm64,darwin/386
+          images: ${{ github.repository }}
+          flavor: false
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=semver,event=tag,pattern={{version}}
+            type=semver,event=tag,pattern={{major}}
+            type=sha,event=pr,format=short
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push digest
+        id: build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          build-args: |
+            - GOOS=${{ matrix.os }}
+            - GOARCH=${{ matrix.arch }}
+          platforms: ${{ matrix.os }}/${{ matrix.arch }}
+          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          outputs: type=image,name=${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
+      - name: Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+  manifest:
+    runs-on: ubuntu-latest
+    needs:
+      - docker
+    steps:
+      - name: Download digests
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ github.repository }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Create manifest list and push
+        working-directory: /tmp/digests
+        run: |
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ github.repository }}@sha256:%s ' *)
+      - name: Inspect image
+        run: |
+          docker buildx imagetools inspect ${{ github.repository }}:${{ steps.meta.outputs.version }}
+  publish:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    if: github.event_name == 'tag' && startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: restore build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: compiled-binaries
+      - name: create release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            bin/*
