--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,11 +53,14 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     needs: test
-    # continue-on-error: true
+    continue-on-error: true
     strategy:
       matrix:
         os: [linux, windows, darwin]
         arch: [amd64, arm64, "386"]
+        exclude:
+          - os: darwin
+            arch: "386"
         # include:
         #   - os: windows
         #     arch: 386
@@ -78,7 +81,7 @@ jobs:
           name: compiled-binaries
           path: bin/
   docker:
-    name: docker
+    name: docker build
     runs-on: ubuntu-latest
     needs: build
     strategy:
@@ -138,6 +141,7 @@ jobs:
           if-no-files-found: error
           retention-days: 1
   manifest:
+    name: publish docker manifest
     runs-on: ubuntu-latest
     needs:
       - docker
