--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,7 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     needs: test
-    continue-on-error: true
+    fail-fast: false
     strategy:
       matrix:
         os: [linux, windows, darwin]
@@ -61,9 +61,6 @@ jobs:
         exclude:
           - os: darwin
             arch: "386"
-        # include:
-        #   - os: windows
-        #     arch: 386
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
@@ -80,6 +77,7 @@ jobs:
         with:
           name: compiled-binaries
           path: bin/
+          name: binaries-${{ matrix.os }}-${{ matrix.arch }}
   docker:
     name: docker build
     runs-on: ubuntu-latest
