--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,8 +54,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     strategy:
+      fail-fast: true
       matrix:
-        fail-fast: false
         os: [linux, windows, darwin]
         arch: [amd64, arm64, "386"]
         exclude:
