--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -85,13 +85,17 @@ jobs:
       matrix:
         os: [linux, windows, darwin]
         arch: [amd64, arm64, "386"]
+        exclude:
+          - os: darwin
+            arch: "386"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: restore build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: compiled-binaries
+          pattern: binaries-*
+          merge-multiple: true
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -180,7 +184,8 @@ jobs:
       - name: restore build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: compiled-binaries
+          pattern: binaries-*
+          merge-multiple: true
       - name: create release
         uses: softprops/action-gh-release@v2
         with:
