--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,6 +82,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     strategy:
+      fail-fast: false
       matrix:
         os: [linux, windows, darwin]
         arch: [amd64, arm64, "386"]
@@ -101,7 +102,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ github.repository }}
-          flavor: false
+          flavor: latest=false
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=semver,event=tag,pattern={{version}}
