--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -84,11 +84,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [linux, windows, darwin]
+        os: [linux] #, windows, darwin]
         arch: [amd64, arm64, "386"]
-        exclude:
-          - os: darwin
-            arch: "386"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
