--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,13 +64,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         os: [linux, windows, darwin]
         arch: [amd64, arm64, arm]
         exclude:
           - os: darwin
-            arch: "386"
+            arch: arm
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
