--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -176,6 +176,12 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ github.repository }}
+          flavor: latest=false
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=semver,event=tag,pattern={{version}}
+            type=semver,event=tag,pattern={{major}}
+            type=sha,event=pr,format=short
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
