--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,8 +24,6 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
-      - name: download go modules to be cached
-        run: make download
       - name: golangci-lint
         uses: reviewdog/action-golangci-lint@v2
         with:
@@ -95,10 +93,23 @@ jobs:
         with:
           path: bin/
           name: binaries-${{ matrix.os }}-${{ matrix.arch }}
+  buildresult:
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    name: Build Result Status
+    needs: [build]
+    steps:
+      - run: exit 1
+        if: >-
+          ${{
+               contains(needs.*.result, 'failure')
+            || contains(needs.*.result, 'cancelled')
+            || contains(needs.*.result, 'skipped')
+          }}
   docker:
     name: docker build
     runs-on: ubuntu-latest
-    needs: build
+    needs: buildresult
     strategy:
       fail-fast: false
       matrix:
@@ -157,11 +168,24 @@ jobs:
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
+  dockerresult:
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    name: Docker Result Status
+    needs: [docker]
+    steps:
+      - run: exit 1
+        if: >-
+          ${{
+               contains(needs.*.result, 'failure')
+            || contains(needs.*.result, 'cancelled')
+            || contains(needs.*.result, 'skipped')
+          }}
   manifest:
     name: publish docker manifest
     runs-on: ubuntu-latest
     needs:
-      - docker
+      - dockerresult
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
@@ -198,7 +222,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs:
-      - build
+      - buildresult
     if: github.event_name == 'tag' && startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: checkout
