--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,10 @@ jobs:
             ~/.cache/go-build
             ~/go/pkg
       - name: install go-junit-report
-        run: go install github.com/jstemmer/go-junit-report/v2@latest
+        run: 
+          curl -sL "https://github.com/jstemmer/go-junit-report/releases/download/v2.1.0/go-junit-report-v2.1.0-linux-amd64.tar.gz" | tar xz
+          chmod +x go-junit-report
+          mv go-junit-report /usr/local/bin/
       - name: test
         run: |
           make report.xml
