--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -237,7 +237,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - buildresult
-    if: github.event_name == 'tag' && startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: checkout
         uses: actions/checkout@v4
