--- a/deployments/charts/nextride-shortcut/values.yaml
+++ b/deployments/charts/nextride-shortcut/values.yaml
@@ -28,10 +28,20 @@ serviceAccount:
 podAnnotations: {}
 podLabels: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+# -- override settings in podSecurityContext. The defaults are currently set to secure defaults that are required for running the nextride-shortcut app
+podSecurityContext:
+  fsGroup: 0
+  runAsNonRoot: true
+  runAsUser: 1001
+  seccompProfile:
+    type: RuntimeDefault
 
-securityContext: {}
+securityContext:
+  allowPrivilegeEscalation: false
+  capabilities:
+    drop:
+      - ALL
+  readOnlyRootFilesystem: true
   # capabilities:
   #   drop:
   #   - ALL
@@ -46,11 +56,13 @@ service:
 ingress:
   enabled: false
   className: ""
-  annotations: {}
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hostname: nextride.local
-  extraHosts: []
+  extraHosts:
+    []
     # - host: chart-example.local
     #   paths:
     #     - path: /
@@ -60,7 +72,8 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -97,3 +110,6 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# -- Add Environment variables to the container. A map of key-value pairs
+env: {}
