--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -237,10 +237,10 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            The [${env.DOCKER_METADATA_OUTPUT_VERSION}](https://hub.docker.com/${env.DOCKER_METADATA_OUTPUT_TAGS}/images) :whale: image has been built and [pushed](https://hub.docker.com/${env.DOCKER_METADATA_OUTPUT_TAGS}/images).
+            The [${{env.DOCKER_METADATA_OUTPUT_VERSION}}](https://hub.docker.com/${{env.DOCKER_METADATA_OUTPUT_TAGS}}/images) :whale: image has been built and [pushed](https://hub.docker.com/${{env.DOCKER_METADATA_OUTPUT_TAGS}}/images).
             You can pull it with:
             ```shell
-            docker pull ${env.DOCKER_METADATA_OUTPUT_TAGS}
+            docker pull ${{env.DOCKER_METADATA_OUTPUT_TAGS}}
             ```
           comment_tag: docker-image-ref
       - name: Inspect image
