retry distroless with user/perms

--- a/deployments/charts/nextride-shortcut/values.yaml
+++ b/deployments/charts/nextride-shortcut/values.yaml
@@ -32,7 +32,7 @@ podLabels: {}
 podSecurityContext:
   fsGroup: 0
   runAsNonRoot: true
-  runAsUser: 1001
+  runAsGroup: 0
   seccompProfile:
     type: RuntimeDefault
 
