--- a/deployments/charts/nextride-shortcut/templates/deployment.yaml
+++ b/deployments/charts/nextride-shortcut/templates/deployment.yaml
@@ -36,6 +36,16 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            {{- if .Values.verbosity -}}
+            - --verbosity={{ .Values.verbosity | default "info" }}
+            {{- end -}}
+            {{- if or .Values.ingress.enabled .Values.proxyOverride -}}
+            - --proxy={{ .Values.proxyOverride | default true | quote }}
+            {{- end -}}
+            {{- if .Values.apiKey -}}
+            - --apiKey={{ .Values.apiKey | quote }}
+            {{- end -}}
           env:
             {{- range $k, $v := .Values.env }}
             - name: {{ $k | upper | quote }}
