--- a/deployments/charts/nextride-shortcut/values.yaml
+++ b/deployments/charts/nextride-shortcut/values.yaml
@@ -28,16 +28,19 @@ serviceAccount:
 podAnnotations: {}
 podLabels: {}
 
-podSecurityContext: {}
-  # fsGroup: 2000
+# -- override settings in podSecurityContext. The defaults are currently set to secure defaults that are required for running the nextride-shortcut app
+podSecurityContext:
+  fsGroup: 0
+  seccompProfile:
+    type: RuntimeDefault
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+securityContext:
+  allowPrivilegeEscalation: false
+  runAsNonRoot: true
+  capabilities:
+    drop:
+      - ALL
+  readOnlyRootFilesystem: true
 
 service:
   type: ClusterIP
@@ -47,10 +50,9 @@ ingress:
   enabled: false
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hostname: nextride.local
-  extraHosts: []
+  extraHosts:
+    []
     # - host: chart-example.local
     #   paths:
     #     - path: /
@@ -59,8 +61,10 @@ ingress:
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+  pathType:
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -75,7 +79,7 @@ resources: {}
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 5
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
@@ -97,3 +101,11 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# -- Add Environment variables to the container. A map of key-value pairs
+env: {}
+
+proxyOverride: ""
+verbosity: ""
+# -- The API key to use for requests to the RTD API
+apiKey: ""
