--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -250,6 +250,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - buildresult
+    permissions:
+      contents: write
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: checkout
