--- a/deployments/charts/nextride-shortcut/templates/deployment.yaml
+++ b/deployments/charts/nextride-shortcut/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
             - --verbosity={{ .Values.verbosity | default "info" }}
             {{- end }}
             {{- if or .Values.ingress.enabled .Values.proxyOverride }}
-            - --proxy={{ .Values.proxyOverride | default true | quote }}
+            - --proxy
             {{- end }}
             {{- if .Values.apiKey }}
             - --apiKey={{ .Values.apiKey | quote }}
